Fix selection issue on mobile.

--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,16 @@ body {
     z-index: -1;
 }
 
+.no-highlights {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .rendering #render-target {
     opacity: 1;
 }
